--- a/frontend/src/components/RecentlyAdded/recently-added.module.css
+++ b/frontend/src/components/RecentlyAdded/recently-added.module.css
@@ -7,7 +7,40 @@
   }
 
   & img {
-    max-width: 8em;
+    width: 100%;
+    height: 100%;
+    /* max-width: 8em; */
     max-height: 8em;
   }
+
+  & a {
+    text-decoration: none;
+    color: var(--base-black);
+  }
+}
+
+.card {
+  width: 10em;
+  max-width: 10em;
+  /* border: 1px solid; */
+  border-radius: 0.5em;
+  overflow: hidden;
+  box-shadow: 0 0 10px grey;
+  transition: 200ms ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card-image {
+  line-height: 0;
+  height: 8em;
+  background-size: cover;
+}
+
+.card-footer {
+  background-color: lightgrey;
+  padding-inline: 0.75em;
+  padding-block: 0.5em;
 }
